syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "LocationContextDescriptorType";

import "sdc/biceps/abstractcontextdescriptor.proto";

message LocationContextDescriptor {
  AbstractContextDescriptor abstract_context_descriptor = 1;
}
